fix: adjust position of modal close button for better visibility

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -30,8 +30,8 @@
 
 .modal__close-btn {
   position: absolute;
-  top: 32px;
-  right: 50px;
+  top: -40px;
+  right: -40px;
   width: 44px;
   height: 44px;
   background-image: url(../images/X\ out\ icon.svg);
@@ -102,8 +102,8 @@
   }
 
   .modal__close-btn {
-    top: 12px;
-    right: 12px;
+    top: -36px;
+    right: 0px;
   }
 
   .modal__label {
